Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -19,8 +19,17 @@
     </section>
 
     <section class="main-content">
-      <h1>
-<a id="slideout" class="anchor" href="#slideout" aria-hidden="true"><span class="octicon octicon-link"></span></a>SlideOut</h1>
+      <h3>
+<a id="default-direction-accepts-int-0---3" class="anchor" href="#default-direction-accepts-int-0---3" aria-hidden="true"><span class="octicon octicon-link"></span></a>Default direction accepts int (0 - 3)</h3>
+
+<ul>
+<li>Left = 0;</li>
+<li>Right = 1;</li>
+<li>Up = 2;</li>
+<li>Down = 3;</li>
+</ul>
+
+<p><em><strong>$(element).slide({ show: false, duration: 1000, defaultdirection: 3, random: true });</strong></em></p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/bitpixels/SlideOut">Slideout</a> is maintained by <a href="https://github.com/bitpixels">bitpixels</a>.</span>
